--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^3.1.1",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^7.20.6",
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sharp": "^3.11.0",
@@ -16,8 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-modular-audio-player": "^1.2.0",
-    "sharp": "^0.28.3"
+    "react-modular-audio-player": "^1.2.0"
   },
   "devDependencies": {
     "prettier": "^2.3.2"
